--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "ecommerce",
   "version": "1.0.0",
-  "description": "A full fledged ecommerce website built with node, express, typescript, prisma and a lot more",
-  "main": "app.js",
+  "description": "start file for node and typescript",
+  "main": "server.js",
   "scripts": {
-    "start": "",
+    "start": "NODE_ENV=production node server.js",
     "dev:tsc": "tsc --watch -p .",
-    "dev:serve": "nodemon -e js -w dist dist/server.js",
+    "dev:serve": "NODE_ENV=development nodemon -e js -w dist dist/server.js",
     "dev": "nodemon . --trace-warnings --inspect",
     "test": "jest"
   },
@@ -14,8 +14,7 @@
     "node",
     "express",
     "typescript",
-    "ecommerce",
-    "prisma"
+       "prisma"
   ],
   "author": "Ifeoluwa Olubo",
   "license": "MIT",
@@ -31,6 +30,7 @@
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
     "prisma": "^3.8.1",
+    "winston": "^3.4.0",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
